--- a/xopkinh.bac/hinh-anh-xuong/index.html
+++ b/xopkinh.bac/hinh-anh-xuong/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="vi" prefix="og: https://ogp.me/ns#" class="loading-site no-js">
 
 <head>
@@ -1055,8 +1055,8 @@
 
 
 
-<p>Địa Chỉ: Đường 284, Thôn Thiên Đức, Xã Trung Chính, Tỉnh Bắc Ninh</p>
-<p>Tư Vấn Miễn Phí: 0975569136</p>
+<p>Địa Chỉ: Cs1 Nguyên Khê- Đông anh<br />Cs2: Trung Chính- Bắc Ninh</p>
+<p>Tư Vấn Miễn Phí: 0931801102</p><p>Zalo: 0337154318</p>
 <p>Email hợp tác: nhuaxopkinhbac@gmail.com</p>
 
 
