--- a/xopkinh.bac/the-san-pham/goc-xop-chen-hang/feed/index.html
+++ b/xopkinh.bac/the-san-pham/goc-xop-chen-hang/feed/index.html
@@ -38,7 +38,7 @@
 
 					<description><![CDATA[Công ty XỐP EPS Kinh Bắc
 
-Địa chỉ: Đường 284, Thôn Thiên Đức, Xã Trung Chính, Tỉnh Bắc Ninh
+Địa chỉ: Cs1 Nguyên Khê- Đông anh<br />Cs2: Trung Chính- Bắc Ninh
 
 Hotline: 0975 569 136]]></description>
 										<content:encoded><![CDATA[<p>XỐP EPS Kinh Bắc CHẤT LƯỢNG CAO – GIẢI PHÁP ĐÓNG GÓI HÀNG HÓA HOÀN HẢO! Chúng tôi tự hào mang đến các sản phẩm xốp chất lượng cao, đáp ứng mọi nhu cầu của bạn:</p>
@@ -58,7 +58,7 @@ Hotline: 0975 569 136]]></description>
 <p>Liên hệ ngay 0975 569 136 để được tư vấn và báo giá.</p>
 <p>********************************</p>
 <p>Công ty XỐP EPS Kinh Bắc</p>
-<p>Địa chỉ: Đường 284, Thôn Thiên Đức, Xã Trung Chính, Tỉnh Bắc Ninh</p>
+<p>Địa chỉ: Cs1 Nguyên Khê- Đông anh<br />Cs2: Trung Chính- Bắc Ninh</p>
 <p>Hotline: 0975 569 136</p>
 ]]></content:encoded>
 					
@@ -78,7 +78,7 @@ Hotline: 0975 569 136]]></description>
 
 					<description><![CDATA[Công ty XỐP EPS Kinh Bắc
 
-Địa chỉ: Đường 284, Thôn Thiên Đức, Xã Trung Chính, Tỉnh Bắc Ninh
+Địa chỉ: Cs1 Nguyên Khê- Đông anh<br />Cs2: Trung Chính- Bắc Ninh
 
 Hotline: 0975 569 136]]></description>
 										<content:encoded><![CDATA[<p><span style="font-size: 17px">XỐP EPS ĐỊNH HÌNH CHẤT LƯỢNG CAO – GIẢI PHÁP ĐÓNG GÓI HÀNG HÓA HOÀN HẢO!</span><br />
@@ -96,7 +96,7 @@ Hotline: 0975 569 136]]></description>
 <span style="font-size: 17px">Liên hệ ngay 0975 569 136 để được tư vấn và báo giá.</span><br />
 <span style="font-size: 17px">******************************** </span><br />
 <span style="font-size: 17px">Công ty XỐP EPS Kinh Bắc</span><br />
-<span style="font-size: 17px">Địa chỉ: Đường 284, Thôn Thiên Đức, Xã Trung Chính, Tỉnh Bắc Ninh</span><br />
+<span style="font-size: 17px">Địa chỉ: Cs1 Nguyên Khê- Đông anh<br />Cs2: Trung Chính- Bắc Ninh</span><br />
 <span style="font-size: 17px">Hotline: 0975 569 136 </span><br />
 <span style="font-size: 17px">#xopEPS #tamxop #panel #donggoi #donghang #sanxuatxopEPS</span><!--/data/user/0/com.samsung.android.app.notes/files/clipdata/clipdata_bodytext_250331_170227_284.sdocx--></p>
 ]]></content:encoded>
@@ -117,7 +117,7 @@ Hotline: 0975 569 136]]></description>
 
 					<description><![CDATA[Công ty XỐP EPS Kinh Bắc
 
-Địa chỉ: Đường 284, Thôn Thiên Đức, Xã Trung Chính, Tỉnh Bắc Ninh
+Địa chỉ: Cs1 Nguyên Khê- Đông anh<br />Cs2: Trung Chính- Bắc Ninh
 
 Hotline: 0975 569 136]]></description>
 										<content:encoded><![CDATA[<p>Góc xốp EPS chèn hàng là sản phẩm định hình khuôn góc dùng để chèn cạnh các góc giúp cố định hàng hóa không xê dịch và móp méo. Chúng được dùng cho đồ gỗ hay các sản phẩm đồ điện gia dụng: tủ lạnh, lò nướng, bếp ga, bếp điện từ, tủ gỗ, kiện hàng,..</p>
@@ -141,7 +141,7 @@ Hotline: 0975 569 136]]></description>
 <p>Liên hệ ngay 0975 569 136 để được tư vấn và báo giá.</p>
 <p>********************************</p>
 <p>Công ty XỐP EPS Kinh Bắc</p>
-<p>Địa chỉ: Đường 284, Thôn Thiên Đức, Xã Trung Chính, Tỉnh Bắc Ninh</p>
+<p>Địa chỉ: Cs1 Nguyên Khê- Đông anh<br />Cs2: Trung Chính- Bắc Ninh</p>
 <p>Hotline: 0975 569 136</p>
 <p>#xopEPS #tamxop #panel #donggoi #donghang #sanxuatxopEPS</p>
 ]]></content:encoded>
