--- a/xopkinh.bac/ton-nen-chong-nong-trong-xay-dung/feed/index.html
+++ b/xopkinh.bac/ton-nen-chong-nong-trong-xay-dung/feed/index.html
@@ -38,7 +38,7 @@
 
 					<description><![CDATA[Công ty XỐP EPS Kinh Bắc
 
-Địa chỉ: Đường 284, Thôn Thiên Đức, Xã Trung Chính, Tỉnh Bắc Ninh
+Địa chỉ: Cs1 Nguyên Khê- Đông anh<br />Cs2: Trung Chính- Bắc Ninh
 
 Hoiline: 0975 569 136]]></description>
 										<content:encoded><![CDATA[<p>XỐP EPS Kinh Bắc: GIẢI PHÁP TÔN NỀN, KÊ LÓT SÀN ĐỔ BÊ TÔNG</p>
@@ -66,7 +66,7 @@ Hoiline: 0975 569 136]]></description>
 <p>Hãy liên hệ ngay số 0975 569 136 với Xốp EPS Kinh Bắc để được tư vấn và báo giá tốt nhất!</p>
 <p>********************************</p>
 <p>Công ty XỐP EPS Kinh Bắc</p>
-<p><img src="https://s.w.org/images/core/emoji/15.0.3/72x72/1f3ea.png" alt="🏪" class="wp-smiley" style="height: 1em; max-height: 1em;" />Địa chỉ: Đường 284, Thôn Thiên Đức, Xã Trung Chính, Tỉnh Bắc Ninh</p>
+<p><img src="https://s.w.org/images/core/emoji/15.0.3/72x72/1f3ea.png" alt="🏪" class="wp-smiley" style="height: 1em; max-height: 1em;" />Địa chỉ: Cs1 Nguyên Khê- Đông anh<br />Cs2: Trung Chính- Bắc Ninh</p>
 <p><img src="https://s.w.org/images/core/emoji/15.0.3/72x72/260e.png" alt="☎" class="wp-smiley" style="height: 1em; max-height: 1em;" />Hotline: 0975 569 136</p>
 <p>&nbsp;</p>
 ]]></content:encoded>
@@ -87,7 +87,7 @@ Hoiline: 0975 569 136]]></description>
 
 					<description><![CDATA[Công ty XỐP EPS Kinh Bắc
 
-Địa chỉ: Đường 284, Thôn Thiên Đức, Xã Trung Chính, Tỉnh Bắc Ninh
+Địa chỉ: Cs1 Nguyên Khê- Đông anh<br />Cs2: Trung Chính- Bắc Ninh
 
 Hotline: 0975 569 136]]></description>
 										<content:encoded><![CDATA[<p>Xốp EPS được ứng dụng nhiều trong ngành xây dựng. Chúng ta có thể sử dụng tấm xốp EPS thay thế cho vật liệu tôn nền truyền thống. Chúng có nhiều tính năng vượt trội như chống nóng, cách nhiệt, cách âm, giảm tải trọng công trình đem lại hiệu quả cao.</p>
@@ -107,7 +107,7 @@ Hotline: 0975 569 136]]></description>
 <p>Liên hệ ngay 0975 569 136 để được tư vấn và báo giá.</p>
 <p>********************************</p>
 <p>Công ty XỐP EPS Kinh Bắc</p>
-<p>Địa chỉ: Đường 284, Thôn Thiên Đức, Xã Trung Chính, Tỉnh Bắc Ninh</p>
+<p>Địa chỉ: Cs1 Nguyên Khê- Đông anh<br />Cs2: Trung Chính- Bắc Ninh</p>
 <p>Hotline: 0975 569 136</p>
 ]]></content:encoded>
 					
