--- a/xopkinh.bac/blox-dang-khoi/feed/index.html
+++ b/xopkinh.bac/blox-dang-khoi/feed/index.html
@@ -38,7 +38,7 @@
 
 					<description><![CDATA[Công ty XỐP EPS Kinh Bắc
 
-Địa chỉ: Đường 284, Thôn Thiên Đức, Xã Trung Chính, Tỉnh Bắc Ninh
+Địa chỉ: Cs1 Nguyên Khê- Đông anh<br />Cs2: Trung Chính- Bắc Ninh
 
 Hotline: 0975 569 136]]></description>
 										<content:encoded><![CDATA[<p>Xốp cách nhiệt EPS (còn được gọi là xốp khối, xốp cứng, xốp tấm, mốp xốp) là một trong những loại vật liệu phổ biến và được sử dụng rất nhiều trong các công trình xây dựng hiện nay. Cùng với việc được sử dụng để tôn nền, nâng sàn thì xốp EPS Kinh Bắc còn được dùng để cách âm, cách nhiệt cho công trình, đóng gói định hình bảo quản hàng hóa.</p>
@@ -62,7 +62,7 @@ Hotline: 0975 569 136]]></description>
 <p>Liên hệ ngay 0975 569 136 để được tư vấn và báo giá.</p>
 <p>********************************</p>
 <p>Công ty XỐP EPS Kinh Bắc</p>
-<p>Địa chỉ: Đường 284, Thôn Thiên Đức, Xã Trung Chính, Tỉnh Bắc Ninh</p>
+<p>Địa chỉ: Cs1 Nguyên Khê- Đông anh<br />Cs2: Trung Chính- Bắc Ninh</p>
 <p>Hotline: 0975 569 136</p>
 <p>&nbsp;</p>
 ]]></content:encoded>
@@ -83,7 +83,7 @@ Hotline: 0975 569 136]]></description>
 
 					<description><![CDATA[Công ty XỐP EPS Kinh Bắc
 
-Địa chỉ: Đường 284, Thôn Thiên Đức, Xã Trung Chính, Tỉnh Bắc Ninh
+Địa chỉ: Cs1 Nguyên Khê- Đông anh<br />Cs2: Trung Chính- Bắc Ninh
 
 Hotline: 0975 569 136]]></description>
 										<content:encoded><![CDATA[<p>Xốp cách nhiệt EPS (còn được gọi là xốp khối, xốp cứng, xốp tấm, mốp xốp) là một trong những loại vật liệu phổ biến và được sử dụng rất nhiều trong các công trình xây dựng hiện nay. Cùng với việc được sử dụng để tôn nền, nâng sàn thì xốp EPS Kinh Bắc còn được dùng để cách âm, cách nhiệt cho công trình, đóng gói định hình bảo quản hàng hóa.</p>
@@ -107,7 +107,7 @@ Hotline: 0975 569 136]]></description>
 <p>Liên hệ ngay 0975 569 136 để được tư vấn và báo giá.</p>
 <p>********************************</p>
 <p>Công ty XỐP EPS Kinh Bắc</p>
-<p>Địa chỉ: Đường 284, Thôn Thiên Đức, Xã Trung Chính, Tỉnh Bắc Ninh</p>
+<p>Địa chỉ: Cs1 Nguyên Khê- Đông anh<br />Cs2: Trung Chính- Bắc Ninh</p>
 <p>Hotline: 0975 569 136</p>
 <p>&nbsp;</p>
 ]]></content:encoded>
@@ -128,7 +128,7 @@ Hotline: 0975 569 136]]></description>
 
 					<description><![CDATA[Công ty XỐP EPS Kinh Bắc
 
-Địa chỉ: Đường 284, Thôn Thiên Đức, Xã Trung Chính, Tỉnh Bắc Ninh
+Địa chỉ: Cs1 Nguyên Khê- Đông anh<br />Cs2: Trung Chính- Bắc Ninh
 
 Hotline: 0975 569 136]]></description>
 										<content:encoded><![CDATA[<p>Xốp cách nhiệt EPS (còn được gọi là xốp khối, xốp cứng, xốp tấm, mốp xốp) là một trong những loại vật liệu phổ biến và được sử dụng rất nhiều trong các công trình xây dựng hiện nay. Cùng với việc được sử dụng để tôn nền, nâng sàn thì xốp EPS Kinh Bắc còn được dùng để cách âm, cách nhiệt cho công trình, đóng gói định hình bảo quản hàng hóa.</p>
@@ -152,7 +152,7 @@ Hotline: 0975 569 136]]></description>
 <p>Liên hệ ngay 0975 569 136 để được tư vấn và báo giá.</p>
 <p>********************************</p>
 <p>Công ty XỐP EPS Kinh Bắc</p>
-<p>Địa chỉ: Đường 284, Thôn Thiên Đức, Xã Trung Chính, Tỉnh Bắc Ninh</p>
+<p>Địa chỉ: Cs1 Nguyên Khê- Đông anh<br />Cs2: Trung Chính- Bắc Ninh</p>
 <p>Hotline: 0975 569 136</p>
 <p>&nbsp;</p>
 ]]></content:encoded>
@@ -173,7 +173,7 @@ Hotline: 0975 569 136]]></description>
 
 					<description><![CDATA[Công ty XỐP EPS Kinh Bắc
 
-Địa chỉ: Đường 284, Thôn Thiên Đức, Xã Trung Chính, Tỉnh Bắc Ninh
+Địa chỉ: Cs1 Nguyên Khê- Đông anh<br />Cs2: Trung Chính- Bắc Ninh
 
 Hotline: 0975 569 136]]></description>
 										<content:encoded><![CDATA[<p>Xốp cách nhiệt EPS (còn được gọi là xốp khối, xốp cứng, xốp tấm, mốp xốp) là một trong những loại vật liệu phổ biến và được sử dụng rất nhiều trong các công trình xây dựng hiện nay. Cùng với việc được sử dụng để tôn nền, nâng sàn thì xốp EPS Kinh Bắc còn được dùng để cách âm, cách nhiệt cho công trình, đóng gói định hình bảo quản hàng hóa.</p>
@@ -197,7 +197,7 @@ Hotline: 0975 569 136]]></description>
 <p>Liên hệ ngay 0975 569 136 để được tư vấn và báo giá.</p>
 <p>********************************</p>
 <p>Công ty XỐP EPS Kinh Bắc</p>
-<p>Địa chỉ: Đường 284, Thôn Thiên Đức, Xã Trung Chính, Tỉnh Bắc Ninh</p>
+<p>Địa chỉ: Cs1 Nguyên Khê- Đông anh<br />Cs2: Trung Chính- Bắc Ninh</p>
 <p>Hotline: 0975 569 136</p>
 <p>&nbsp;</p>
 ]]></content:encoded>
@@ -218,7 +218,7 @@ Hotline: 0975 569 136]]></description>
 
 					<description><![CDATA[Công ty XỐP EPS Kinh Bắc
 
-Địa chỉ: Đường 284, Thôn Thiên Đức, Xã Trung Chính, Tỉnh Bắc Ninh
+Địa chỉ: Cs1 Nguyên Khê- Đông anh<br />Cs2: Trung Chính- Bắc Ninh
 
 Hotline: 0975 569 136]]></description>
 										<content:encoded><![CDATA[<p>Xốp cách nhiệt EPS (còn được gọi là xốp khối, xốp cứng, xốp tấm, mốp xốp) là một trong những loại vật liệu phổ biến và được sử dụng rất nhiều trong các công trình xây dựng hiện nay. Cùng với việc được sử dụng để tôn nền, nâng sàn thì xốp EPS Kinh Bắc còn được dùng để cách âm, cách nhiệt cho công trình, đóng gói định hình bảo quản hàng hóa.</p>
@@ -242,7 +242,7 @@ Hotline: 0975 569 136]]></description>
 <p>Liên hệ ngay 0975 569 136 để được tư vấn và báo giá.</p>
 <p>********************************</p>
 <p>Công ty XỐP EPS Kinh Bắc</p>
-<p>Địa chỉ: Đường 284, Thôn Thiên Đức, Xã Trung Chính, Tỉnh Bắc Ninh</p>
+<p>Địa chỉ: Cs1 Nguyên Khê- Đông anh<br />Cs2: Trung Chính- Bắc Ninh</p>
 <p>Hotline: 0975 569 136</p>
 <p>&nbsp;</p>
 ]]></content:encoded>
@@ -263,7 +263,7 @@ Hotline: 0975 569 136]]></description>
 
 					<description><![CDATA[Công ty XỐP EPS Kinh Bắc
 
-Địa chỉ: Đường 284, Thôn Thiên Đức, Xã Trung Chính, Tỉnh Bắc Ninh
+Địa chỉ: Cs1 Nguyên Khê- Đông anh<br />Cs2: Trung Chính- Bắc Ninh
 
 Hotline: 0975 569 136]]></description>
 										<content:encoded><![CDATA[<p>Xốp cách nhiệt EPS (còn được gọi là xốp khối, xốp cứng, xốp tấm, mốp xốp) là một trong những loại vật liệu phổ biến và được sử dụng rất nhiều trong các công trình xây dựng hiện nay. Cùng với việc được sử dụng để tôn nền, nâng sàn thì xốp EPS Kinh Bắc còn được dùng để cách âm, cách nhiệt cho công trình, đóng gói định hình bảo quản hàng hóa.</p>
@@ -288,7 +288,7 @@ Hotline: 0975 569 136]]></description>
 <p>Liên hệ ngay 0975 569 136 để được tư vấn và báo giá.</p>
 <p>********************************</p>
 <p>Công ty XỐP EPS Kinh Bắc</p>
-<p>Địa chỉ: Đường 284, Thôn Thiên Đức, Xã Trung Chính, Tỉnh Bắc Ninh</p>
+<p>Địa chỉ: Cs1 Nguyên Khê- Đông anh<br />Cs2: Trung Chính- Bắc Ninh</p>
 <p>Hotline: 0975 569 136</p>
 ]]></content:encoded>
 					
@@ -308,7 +308,7 @@ Hotline: 0975 569 136]]></description>
 
 					<description><![CDATA[Công ty XỐP EPS Kinh Bắc
 
-Địa chỉ: Đường 284, Thôn Thiên Đức, Xã Trung Chính, Tỉnh Bắc Ninh
+Địa chỉ: Cs1 Nguyên Khê- Đông anh<br />Cs2: Trung Chính- Bắc Ninh
 
 Hotline: 0975 569 136]]></description>
 										<content:encoded><![CDATA[<p>XỐP EPS Kinh Bắc CHẤT LƯỢNG CAO Chúng tôi tự hào mang đến các sản phẩm xốp chất lượng cao, đáp ứng mọi nhu cầu của bạn:</p>
@@ -326,7 +326,7 @@ Hotline: 0975 569 136]]></description>
 <p>Liên hệ ngay 0975 569 136 để được tư vấn và báo giá.</p>
 <p>********************************</p>
 <p>Công ty XỐP EPS Kinh Bắc</p>
-<p>Địa chỉ: Đường 284, Thôn Thiên Đức, Xã Trung Chính, Tỉnh Bắc Ninh</p>
+<p>Địa chỉ: Cs1 Nguyên Khê- Đông anh<br />Cs2: Trung Chính- Bắc Ninh</p>
 <p>Hotline: 0975 569 136</p>
 ]]></content:encoded>
 					
@@ -345,7 +345,7 @@ Hotline: 0975 569 136]]></description>
 				<guid isPermaLink="false">https://xopepsminhdang.com/?post_type=product&#038;p=307</guid>
 
 					<description><![CDATA[Công ty XỐP EPS Kinh Bắc
-Địa chỉ: Đường 284, Thôn Thiên Đức, Xã Trung Chính, Tỉnh Bắc Ninh
+Địa chỉ: Cs1 Nguyên Khê- Đông anh<br />Cs2: Trung Chính- Bắc Ninh
 Hotline: 0975 569 136]]></description>
 										<content:encoded><![CDATA[<p>Công ty Kinh Bắc chuyên xốp EPS</p>
 <p>XỐP EPS CHẤT LƯỢNG CAO – GIẢI PHÁP ĐÓNG GÓI HÀNG HÓA HOÀN HẢO!<br />
@@ -364,7 +364,7 @@ Hãy để chúng tôi giúp bạn bảo vệ hàng hóa một cách tốt nhấ
 Liên hệ ngay 0975 569 136 để được tư vấn và báo giá.<br />
 ********************************<br />
 Công ty XỐP EPS Kinh Bắc<br />
-Địa chỉ: Đường 284, Thôn Thiên Đức, Xã Trung Chính, Tỉnh Bắc Ninh<br />
+Địa chỉ: Cs1 Nguyên Khê- Đông anh<br />Cs2: Trung Chính- Bắc Ninh<br />
 Hotline: 0975 569 136<br />
 #xopEPS #tamxop #panel #donggoi #donghang #sanxuatxopEPS</p>
 ]]></content:encoded>
